Fix preferences popup not showing when page is scrolled already

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -343,7 +343,7 @@
 
 .notificationapi-preferences-container {
   z-index: 2147483647;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   right: 0;
